--- a/u2c2/index.html
+++ b/u2c2/index.html
@@ -1,42 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unit2 C2</title>
-    <style>
-      * {
-        margin: 0px;
-        padding: 0px;
-      }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Unit2 C2</title>
+  <style>
+    * {
+      margin: 0px;
+      padding: 0px;
+    }
+
+    #main {
+      margin: auto;
+      border: 2px solid red;
+      align-items: center;
+      text-align: center;
+    }
+
+    #banner {
+      border: 2px solid black;
+      display: flex;
+      justify-content: space-between;
+      width: 85%;
+      margin: auto;
+      border-radius: 20px;
+      align-items: center;
+      /* justify-content: space-between; */
+      line-height: 35px;
+      background-color: #332f7b;
+      color: white;
+    }
+
+    #banner>div {
+      margin-left: 5%;
+
+    }
+
+    #banner>div:first-child {
+      margin-top: -5%;
+    }
+
+    #banner>div button {
+      margin-left: -68%;
+      padding-left: 4%;
+      padding-right: 4%;
+      padding-top: 3%;
+      padding-bottom: 3%;
+      border-radius: 10px;
+      border: 1px solid transparent;
+    }
+
+    #banner>div:first-child {
+      margin-top: -5%;
+    }
 
 
 
-      /* Medium Screen */
-      @media only screen and (min-width: 500px) and (max-width: 768px) {
-      }
 
-      /* Small Screen */
-      @media only screen and (min-width: 320px) and (max-width: 499px) {
-      }
-    </style>
-  </head>
-  <body>
-    <div id="main">
-      <div id="banner">
-        <!-- Here should be 2 divs one for the banner heading and button and the second is for banner image -->
+    #banner>div:last-child {
+      width: 40%;
+    }
+
+    #banner>div img {
+      width: 80%;
+    }
+
+    /* Medium Screen */
+    @media only screen and (min-width: 500px) and (max-width: 768px) {}
+
+    /* Small Screen */
+    @media only screen and (min-width: 320px) and (max-width: 499px) {}
+  </style>
+</head>
+
+<body>
+  <div id="main">
+    <div id="banner">
+      <!-- Here should be 2 divs one for the banner heading and button and the second is for banner image -->
+      <div>
+        <h1>You are in safe hands</h1>
+        <p>Choose the exparts in end to end surgical care</p>
+        <button>Know More</button>
       </div>
-      <div id="services">
-        <!-- Here should be 6 divs. All of them should be in a single line for large screen. For medium and large screen refer to question statement -->
-      </div>
-      <div id="works">
-        <h1>Book an appointment for an in-clinic consultation</h1>
-        <p>Find experienced doctors across all specialties</p>
-        <div>
-          <!-- Here should be 8 divs. They should be in 4 colums and two rows for large screen.For medium and large screen refer to question statement -->
-        </div>
+      <div><img src="https://www.practostatic.com/consumer-home/practo-care/1631634827/dweb_hero_banner.png"
+          alt="practo-care"></div>
+    </div>
+    <div id="services">
+      <!-- Here should be 6 divs. All of them should be in a single line for large screen. For medium and large screen refer to question statement -->
+    </div>
+    <div id="works">
+      <h1>Book an appointment for an in-clinic consultation</h1>
+      <p>Find experienced doctors across all specialties</p>
+      <div>
+        <!-- Here should be 8 divs. They should be in 4 colums and two rows for large screen.For medium and large screen refer to question statement -->
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
